Add Buttons css

--- a/index.hbs
+++ b/index.hbs
@@ -11,7 +11,9 @@
             {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
             <h1 class="blog-title">{{@blog.title}}</h1>
             <h2 class="blog-description">{{@blog.description}}</h2>
+
         </div>
+		<div id="site-head-content" class="inner"><a href="myroom" class="button button-pill button-flat-primary">Go Room</a></div>
     </div>
 </header>
 
