--- a/index.hbs
+++ b/index.hbs
@@ -13,7 +13,7 @@
             <h2 class="blog-description">{{@blog.description}}</h2>
 
         </div>
-		<div id="site-head-content" class="inner"><a href="myroom" class="button button-pill button-flat-primary">Go Room</a></div>
+		<div id="site-head-content" class="inner"><a href="myroom/roomId" class="button button-pill button-flat-primary">Go Room</a></div>
     </div>
 </header>
 
