--- a/index.hbs
+++ b/index.hbs
@@ -11,15 +11,18 @@
             {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
             <h1 class="blog-title">{{@blog.title}}</h1>
             <h2 class="blog-description">{{@blog.description}}</h2>
+			<div class="row">
+<input type="text" class="form-control input-sm" placeholder="Your Name" id='name' oninput="var nickname = $('#name').val();$('#buttonsend').attr('href','room/'+nickname);"/>
+<a href="" id="buttonsend" class="button button-pill button-flat-primary">教室</a></div>
 
         </div>
-		<div id="site-head-content" class="inner"><a href="myroom/roomId" class="button button-pill button-flat-primary">Go Room</a></div>
+		
     </div>
+
 </header>
 
 {{! The main content area on the homepage }}
 <main class="content" role="main">
-
     {{! Each post will be output using this markup }}
     {{#foreach posts}}
 
