--- a/teacher.hbs
+++ b/teacher.hbs
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     {{! Page Meta }}
-    <title>{{meta_title}}</title>
-    <meta name="description" content="{{meta_description}}" />
+    <title>Room</title>
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
@@ -16,11 +15,6 @@
     {{! Styles'n'Scripts }}
 	<link rel="stylesheet" type="text/css" href="/assets/css/buttons.css" />
 	<link rel="stylesheet" type="text/css" href="/assets/css/font-awesome.min.css" />
-	<!-- Loading Bootstrap -->
-    <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <!-- Loading Flat UI -->
-    <link href="/assets/css/flat-ui.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="/assets/css/flat-ui.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/screen_back.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400" />
 
@@ -30,7 +24,7 @@
 <body class="{{body_class}}">
 
     {{! Everything else gets inserted here }}
-    {{{body}}}
+    This is Teacher Room
 
     <footer class="site-footer">
         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
@@ -45,6 +39,6 @@
 
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="/assets/js/index.js"></script>
-	    
+
 </body>
 </html>
